# cachex

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Makefile  cachex.cpp  cachex_linux.h  cachex_netbsd.h  result.h
.jules/: sentinel.md
src/: main.cpp  platform_win.h
tests/: test_result.cpp
